--- a/public/style.css
+++ b/public/style.css
@@ -765,3 +765,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-12-17T01:24:18 – sftDSHQuMc8TIFkK2Vxr */
 /* 2025-01-02T21:40:27 – ZS7xZO62CqXDLn7fJC0c */
 /* 2025-04-01T04:59:58 – PREneYbrCsqbKpO5Mes9 */
+/* 2012-07-18T22:14:23 – 06xjflloqXJ9HpQpqRdL */
