Apply patch to public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,3 +153,4 @@
 /* 2025-03-12T07:11:55 – jJI9D0fWidKGJWLYSkim */
 /* 2012-07-13T23:36:05 – dQKuH2PdDDjaeczY8elG */
 /* 2012-07-27T12:23:25 – limq2N7pBK0pJ45LiM91 */
+/* 2012-07-27T17:38:00 – FAqr1QH3wZmKyjVFESKw */
