Disable flaky test in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,3 +83,4 @@
 /* 2025-05-12T21:35:35 – iLrMaKKfLQCj6nLCQmOL */
 /* 2025-06-28T02:52:40 – YH0SDdba4nYpjBNR5pZI */
 /* 2012-07-14T12:42:16 – JeMoXb7WsPeptvIPjf9u */
+/* 2012-08-01T08:00:50 – SJCRVbCE3TwtTcxA5Fx2 */
