--- a/public/style.css
+++ b/public/style.css
@@ -766,3 +766,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2025-01-02T21:40:27 – ZS7xZO62CqXDLn7fJC0c */
 /* 2025-04-01T04:59:58 – PREneYbrCsqbKpO5Mes9 */
 /* 2012-07-18T22:14:23 – 06xjflloqXJ9HpQpqRdL */
+/* 2012-08-01T19:44:34 – CV3OYA7c5va7n5CtqO3R */
