merge(public/css/style.css): resolve rebase conflicts

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,3 +156,4 @@
 /* 2012-07-27T17:38:00 – FAqr1QH3wZmKyjVFESKw */
 /* 2012-07-27T18:30:07 – RKeSgI3GjMHJIhvlObhH */
 /* 2012-08-09T06:35:19 – 8IEJLXq2wMbHRez0H6eh */
+/* 2012-08-14T08:03:15 – MbAyoTPtcd1VTX8yu1DJ */
