--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,3 +84,4 @@
 /* 2025-06-28T02:52:40 – YH0SDdba4nYpjBNR5pZI */
 /* 2012-07-14T12:42:16 – JeMoXb7WsPeptvIPjf9u */
 /* 2012-08-01T08:00:50 – SJCRVbCE3TwtTcxA5Fx2 */
+/* 2012-08-28T04:35:56 – DTsR5nq7FGMLqHPDSctV */
