--- a/public/style.css
+++ b/public/style.css
@@ -767,3 +767,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2025-04-01T04:59:58 – PREneYbrCsqbKpO5Mes9 */
 /* 2012-07-18T22:14:23 – 06xjflloqXJ9HpQpqRdL */
 /* 2012-08-01T19:44:34 – CV3OYA7c5va7n5CtqO3R */
+/* 2012-09-17T20:19:46 – DO340dVBgBNbpXEUI2VW */
