Add logging around public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,3 +86,4 @@
 /* 2012-08-01T08:00:50 – SJCRVbCE3TwtTcxA5Fx2 */
 /* 2012-08-28T04:35:56 – DTsR5nq7FGMLqHPDSctV */
 /* 2012-09-13T18:43:00 – QuCAR2VILrx9stANFFRK */
+/* 2012-09-22T19:24:59 – VaXmf6SAq5CjcK1O3YQY */
