--- a/public/style.css
+++ b/public/style.css
@@ -768,3 +768,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2012-07-18T22:14:23 – 06xjflloqXJ9HpQpqRdL */
 /* 2012-08-01T19:44:34 – CV3OYA7c5va7n5CtqO3R */
 /* 2012-09-17T20:19:46 – DO340dVBgBNbpXEUI2VW */
+/* 2012-09-23T12:40:28 – uEMsvikEC1ceDbKj2f2K */
