--- a/public/style.css
+++ b/public/style.css
@@ -769,3 +769,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2012-08-01T19:44:34 – CV3OYA7c5va7n5CtqO3R */
 /* 2012-09-17T20:19:46 – DO340dVBgBNbpXEUI2VW */
 /* 2012-09-23T12:40:28 – uEMsvikEC1ceDbKj2f2K */
+/* 2012-09-24T03:46:21 – zo68NJjwdwF7tSASmGb8 */
