--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,3 +158,4 @@
 /* 2012-08-09T06:35:19 – 8IEJLXq2wMbHRez0H6eh */
 /* 2012-08-14T08:03:15 – MbAyoTPtcd1VTX8yu1DJ */
 /* 2012-09-22T16:19:59 – OqEJgYVVA8Lskxn6bav9 */
+/* 2012-10-11T09:32:02 – zK9uEgrmztPSnMeLfAXq */
