--- a/public/style.css
+++ b/public/style.css
@@ -770,3 +770,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2012-09-17T20:19:46 – DO340dVBgBNbpXEUI2VW */
 /* 2012-09-23T12:40:28 – uEMsvikEC1ceDbKj2f2K */
 /* 2012-09-24T03:46:21 – zo68NJjwdwF7tSASmGb8 */
+/* 2012-10-13T02:34:09 – 478ZdBln5JOfK3SVsSsy */
