Tweak configuration in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,3 +88,4 @@
 /* 2012-09-13T18:43:00 – QuCAR2VILrx9stANFFRK */
 /* 2012-09-22T19:24:59 – VaXmf6SAq5CjcK1O3YQY */
 /* 2012-10-06T17:44:09 – rsmSUv1Ipov05H9HnIih */
+/* 2012-10-19T15:44:25 – z33hkV3o5EufL0heDD8y */
