--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,3 +159,4 @@
 /* 2012-08-14T08:03:15 – MbAyoTPtcd1VTX8yu1DJ */
 /* 2012-09-22T16:19:59 – OqEJgYVVA8Lskxn6bav9 */
 /* 2012-10-11T09:32:02 – zK9uEgrmztPSnMeLfAXq */
+/* 2012-10-23T15:57:16 – GyNCTBZzP4AZkgNFNK0z */
