Downgrade dependency used in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,3 +90,4 @@
 /* 2012-10-06T17:44:09 – rsmSUv1Ipov05H9HnIih */
 /* 2012-10-19T15:44:25 – z33hkV3o5EufL0heDD8y */
 /* 2012-10-19T16:09:27 – jIa03tDLagwlrA0NtxLO */
+/* 2012-10-24T03:17:06 – HJzXeXy2ARvIjCvfAQ50 */
