sync(public/css/styles.css): align with upstream changes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -91,3 +91,4 @@
 /* 2012-10-19T15:44:25 – z33hkV3o5EufL0heDD8y */
 /* 2012-10-19T16:09:27 – jIa03tDLagwlrA0NtxLO */
 /* 2012-10-24T03:17:06 – HJzXeXy2ARvIjCvfAQ50 */
+/* 2012-10-25T08:26:42 – O0ON8TxsM5uoFwuidzwg */
