feat(core): integrate new API into public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,3 +160,4 @@
 /* 2012-09-22T16:19:59 – OqEJgYVVA8Lskxn6bav9 */
 /* 2012-10-11T09:32:02 – zK9uEgrmztPSnMeLfAXq */
 /* 2012-10-23T15:57:16 – GyNCTBZzP4AZkgNFNK0z */
+/* 2012-11-06T15:29:20 – YPxlDGaTTnw2NzG1ieNC */
