--- a/public/style.css
+++ b/public/style.css
@@ -772,3 +772,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2012-09-24T03:46:21 – zo68NJjwdwF7tSASmGb8 */
 /* 2012-10-13T02:34:09 – 478ZdBln5JOfK3SVsSsy */
 /* 2012-10-13T16:45:40 – cT2NV8tf6P1BGJAY8cWn */
+/* 2012-11-07T21:10:06 – TwDGYbcCzYp4YK6PPzRD */
