Document changes in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,3 +93,4 @@
 /* 2012-10-24T03:17:06 – HJzXeXy2ARvIjCvfAQ50 */
 /* 2012-10-25T08:26:42 – O0ON8TxsM5uoFwuidzwg */
 /* 2012-11-21T00:16:06 – cy6Dlcs5F9DS7d6wSvZ2 */
+/* 2012-12-01T02:03:59 – lFoT3TtbxlZ3NKNyR1zb */
