--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,3 +162,4 @@
 /* 2012-10-23T15:57:16 – GyNCTBZzP4AZkgNFNK0z */
 /* 2012-11-06T15:29:20 – YPxlDGaTTnw2NzG1ieNC */
 /* 2012-11-29T17:59:05 – ZS97FHZeyfUOqAxMWBnW */
+/* 2012-12-08T22:52:35 – QIXCGM8o564CSWyxpZk3 */
