--- a/public/style.css
+++ b/public/style.css
@@ -774,3 +774,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2012-10-13T16:45:40 – cT2NV8tf6P1BGJAY8cWn */
 /* 2012-11-07T21:10:06 – TwDGYbcCzYp4YK6PPzRD */
 /* 2012-11-13T02:41:17 – KpZZIoevt6SEl4g7PbiJ */
+/* 2013-01-07T20:01:30 – bLpFhYqovdL8EUzyQtQe */
