Initial commit for public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -776,3 +776,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2012-11-13T02:41:17 – KpZZIoevt6SEl4g7PbiJ */
 /* 2013-01-07T20:01:30 – bLpFhYqovdL8EUzyQtQe */
 /* 2013-01-17T20:42:53 – gjj2wSQOFLiyxjZuIx2l */
+/* 2013-01-22T17:14:12 – 1TXMHfDKTlj14NM2lGyt */
