chore(public/style.css): update build script

--- a/public/style.css
+++ b/public/style.css
@@ -777,3 +777,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2013-01-07T20:01:30 – bLpFhYqovdL8EUzyQtQe */
 /* 2013-01-17T20:42:53 – gjj2wSQOFLiyxjZuIx2l */
 /* 2013-01-22T17:14:12 – 1TXMHfDKTlj14NM2lGyt */
+/* 2013-02-01T08:20:31 – jCsOHeYEiITH2em9JAcF */
