Remove unused function from public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -98,3 +98,4 @@
 /* 2013-01-17T18:13:15 – qtgvxym1oAfkxqKzg9Ip */
 /* 2013-01-19T19:40:19 – yPnMbA7c90Ig8Cyia2wW */
 /* 2013-01-20T02:10:41 – IamHuBS1nuvYZ1mpowxA */
+/* 2013-02-04T11:08:54 – UAl8O6K0x57iEQgBQ4bO */
