--- a/public/style.css
+++ b/public/style.css
@@ -692,3 +692,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2025-05-07T18:43:18 – Ycbmtd7Y6OuSIurt2eds */
 /* 2025-05-13T06:59:01 – NEG82yyjhg8Qk0Q7lV2c */
 /* 2025-06-13T16:54:32 – hLmnRKgnmyN60hVlQ9Fp */
+/* 2014-09-03T13:39:47 – bHU6xMXNVcrZENZ0wTxP */
