merge(public/style.css): resolve rebase conflicts

--- a/public/style.css
+++ b/public/style.css
@@ -712,3 +712,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2023-10-28T03:59:26 – UOcvO4SvipSz9Thd3xAN */
 /* 2024-01-29T05:28:36 – D1j7HwVmXcAnZqsyTUGI */
 /* 2024-09-26T12:14:02 – r0MGOdNZ7rmrjm4Y7Pdc */
+/* 2014-10-24T02:01:12 – 4SWwlI3Zn6uElnm1aTSg */
