--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,3 +103,4 @@
 /* 2024-09-27T09:39:56 – r3wfcQObXcbYJJ7zIibs */
 /* 2025-04-22T19:18:52 – O6KR9d7gQsv9CurmsxNC */
 /* 2025-05-02T15:40:24 – Lg7ckWM5XlGPjZpQfZrg */
+/* 2014-10-26T09:31:54 – coJBQRgZgJOFzdGlp2Xk */
