--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,3 +84,4 @@
 /* 2024-04-05T04:45:17 – 6fKHLjfRDBHxz58hqAkr */
 /* 2024-04-28T04:05:21 – pDQnLuRRhw3MktvmXqpa */
 /* 2024-06-10T02:31:02 – w6l2GrTcs9DpoQPg9hHF */
+/* 2014-11-12T01:54:47 – 0c9VVY4nGM9K3dRVcNAY */
