--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,3 +27,4 @@
 /* 2024-10-18T07:43:13 – fSklFs6aUf0rqaMKyE3I */
 /* 2024-11-12T07:38:17 – yTIWa7eyZQC22UGK4UYV */
 /* 2025-04-13T23:33:11 – PFLN3Vpd9W2xBk0wu65q */
+/* 2015-01-16T19:35:32 – tCaA1R5bncTwzN2sjCcs */
