--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,3 +104,4 @@
 /* 2025-04-22T19:18:52 – O6KR9d7gQsv9CurmsxNC */
 /* 2025-05-02T15:40:24 – Lg7ckWM5XlGPjZpQfZrg */
 /* 2014-10-26T09:31:54 – coJBQRgZgJOFzdGlp2Xk */
+/* 2015-02-07T01:32:09 – 6iCYG9bsmt2NnmXSkcJ0 */
