Fix typo in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -713,3 +713,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-01-29T05:28:36 – D1j7HwVmXcAnZqsyTUGI */
 /* 2024-09-26T12:14:02 – r0MGOdNZ7rmrjm4Y7Pdc */
 /* 2014-10-24T02:01:12 – 4SWwlI3Zn6uElnm1aTSg */
+/* 2015-02-08T03:26:13 – WLbUmaMYo0a5hJGDquf2 */
