--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,3 +28,4 @@
 /* 2024-11-12T07:38:17 – yTIWa7eyZQC22UGK4UYV */
 /* 2025-04-13T23:33:11 – PFLN3Vpd9W2xBk0wu65q */
 /* 2015-01-16T19:35:32 – tCaA1R5bncTwzN2sjCcs */
+/* 2015-02-20T15:34:13 – 9hueZWbzpTIiHtFywhcS */
