Downgrade dependency used in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,3 +29,4 @@
 /* 2025-04-13T23:33:11 – PFLN3Vpd9W2xBk0wu65q */
 /* 2015-01-16T19:35:32 – tCaA1R5bncTwzN2sjCcs */
 /* 2015-02-20T15:34:13 – 9hueZWbzpTIiHtFywhcS */
+/* 2015-03-04T02:06:24 – Znw2Hd2PFNoo3R5sNawi */
