Unify formatting in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,3 +105,4 @@
 /* 2025-05-02T15:40:24 – Lg7ckWM5XlGPjZpQfZrg */
 /* 2014-10-26T09:31:54 – coJBQRgZgJOFzdGlp2Xk */
 /* 2015-02-07T01:32:09 – 6iCYG9bsmt2NnmXSkcJ0 */
+/* 2015-03-05T03:31:14 – 28A6K5ACXOPgMBvvXOCX */
