chore(public/css/style.css): update build script

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,3 +106,4 @@
 /* 2014-10-26T09:31:54 – coJBQRgZgJOFzdGlp2Xk */
 /* 2015-02-07T01:32:09 – 6iCYG9bsmt2NnmXSkcJ0 */
 /* 2015-03-05T03:31:14 – 28A6K5ACXOPgMBvvXOCX */
+/* 2015-06-12T07:37:56 – ha2pC985z21xHLUVOgqv */
