--- a/public/style.css
+++ b/public/style.css
@@ -715,3 +715,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2014-10-24T02:01:12 – 4SWwlI3Zn6uElnm1aTSg */
 /* 2015-02-08T03:26:13 – WLbUmaMYo0a5hJGDquf2 */
 /* 2015-04-01T11:47:32 – rQ3BpyNfR9AOcwZuHSEz */
+/* 2015-07-27T07:06:39 – IiWi96KFL8FN0iq2xZ4L */
