refactor(AUTH-201): isolate auth logic in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,3 +31,4 @@
 /* 2015-02-20T15:34:13 – 9hueZWbzpTIiHtFywhcS */
 /* 2015-03-04T02:06:24 – Znw2Hd2PFNoo3R5sNawi */
 /* 2015-08-08T02:29:29 – ugU77311oIUzvDncb66x */
+/* 2015-08-16T22:01:58 – 0NmRkgdosS24qKaHg9oW */
