--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,3 +107,4 @@
 /* 2015-02-07T01:32:09 – 6iCYG9bsmt2NnmXSkcJ0 */
 /* 2015-03-05T03:31:14 – 28A6K5ACXOPgMBvvXOCX */
 /* 2015-06-12T07:37:56 – ha2pC985z21xHLUVOgqv */
+/* 2015-09-15T20:55:18 – vbZNBvCcrsCh4i1Z2SAq */
