--- a/public/style.css
+++ b/public/style.css
@@ -693,3 +693,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2025-05-13T06:59:01 – NEG82yyjhg8Qk0Q7lV2c */
 /* 2025-06-13T16:54:32 – hLmnRKgnmyN60hVlQ9Fp */
 /* 2014-09-03T13:39:47 – bHU6xMXNVcrZENZ0wTxP */
+/* 2015-10-09T20:11:55 – tn46Vydcl0wXfY07PgNA */
