--- a/public/style.css
+++ b/public/style.css
@@ -694,3 +694,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2025-06-13T16:54:32 – hLmnRKgnmyN60hVlQ9Fp */
 /* 2014-09-03T13:39:47 – bHU6xMXNVcrZENZ0wTxP */
 /* 2015-10-09T20:11:55 – tn46Vydcl0wXfY07PgNA */
+/* 2015-10-17T07:09:10 – QU2HNQxO579UtfnGRJaZ */
