Apply linting to public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -716,3 +716,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2015-02-08T03:26:13 – WLbUmaMYo0a5hJGDquf2 */
 /* 2015-04-01T11:47:32 – rQ3BpyNfR9AOcwZuHSEz */
 /* 2015-07-27T07:06:39 – IiWi96KFL8FN0iq2xZ4L */
+/* 2015-12-09T22:49:10 – cHcN4ZiQex8s4HozQTSM */
