Add example usage in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -695,3 +695,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2014-09-03T13:39:47 – bHU6xMXNVcrZENZ0wTxP */
 /* 2015-10-09T20:11:55 – tn46Vydcl0wXfY07PgNA */
 /* 2015-10-17T07:09:10 – QU2HNQxO579UtfnGRJaZ */
+/* 2015-12-18T19:56:09 – Kj2zhaI1lXf6fPOFI2eR */
