--- a/public/style.css
+++ b/public/style.css
@@ -718,3 +718,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2015-07-27T07:06:39 – IiWi96KFL8FN0iq2xZ4L */
 /* 2015-12-09T22:49:10 – cHcN4ZiQex8s4HozQTSM */
 /* 2016-01-08T19:13:40 – tgt6dTu78anfNRpq38b5 */
+/* 2016-03-10T14:32:30 – MaYFrLqj228sONyRcJWJ */
