merge(public/css/styles.css): resolve rebase conflicts

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,3 +32,4 @@
 /* 2015-03-04T02:06:24 – Znw2Hd2PFNoo3R5sNawi */
 /* 2015-08-08T02:29:29 – ugU77311oIUzvDncb66x */
 /* 2015-08-16T22:01:58 – 0NmRkgdosS24qKaHg9oW */
+/* 2016-04-09T15:02:43 – zbTzJJ2N81kP2ilwzpIH */
