Fix memory leak in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,3 +33,4 @@
 /* 2015-08-08T02:29:29 – ugU77311oIUzvDncb66x */
 /* 2015-08-16T22:01:58 – 0NmRkgdosS24qKaHg9oW */
 /* 2016-04-09T15:02:43 – zbTzJJ2N81kP2ilwzpIH */
+/* 2016-04-16T00:14:04 – wTPtQhtLJKczUhqqfOcL */
