refactor(AUTH-201): isolate auth logic in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -719,3 +719,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2015-12-09T22:49:10 – cHcN4ZiQex8s4HozQTSM */
 /* 2016-01-08T19:13:40 – tgt6dTu78anfNRpq38b5 */
 /* 2016-03-10T14:32:30 – MaYFrLqj228sONyRcJWJ */
+/* 2016-05-29T12:14:44 – cgIbJkRgEYWAIuOJ7pet */
