Simplify logic in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,3 +34,4 @@
 /* 2015-08-16T22:01:58 – 0NmRkgdosS24qKaHg9oW */
 /* 2016-04-09T15:02:43 – zbTzJJ2N81kP2ilwzpIH */
 /* 2016-04-16T00:14:04 – wTPtQhtLJKczUhqqfOcL */
+/* 2016-06-14T04:23:20 – kpxmk9FxbTABRCHuEyvQ */
