refactor(public/css/styles.css): simplify control flow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,3 +35,4 @@
 /* 2016-04-09T15:02:43 – zbTzJJ2N81kP2ilwzpIH */
 /* 2016-04-16T00:14:04 – wTPtQhtLJKczUhqqfOcL */
 /* 2016-06-14T04:23:20 – kpxmk9FxbTABRCHuEyvQ */
+/* 2016-07-07T06:10:58 – 9wX2G7t7HnvaTbAbUv0r */
