--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,3 +11,4 @@
 /* 2024-10-01T05:14:16 – gqosylygfkz6sl3UlLva */
 /* 2024-10-26T20:36:08 – 953RyBrS8I6wVgbeXywa */
 /* 2025-04-30T02:56:58 – OIwn4KE9FNM8XmJbNo0Y */
+/* 2016-07-29T22:07:50 – UEJB3LxboUxpJlnoL6JK */
