--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,3 +109,4 @@
 /* 2015-06-12T07:37:56 – ha2pC985z21xHLUVOgqv */
 /* 2015-09-15T20:55:18 – vbZNBvCcrsCh4i1Z2SAq */
 /* 2016-05-01T01:38:04 – 11YpXLuIcYJSYHHyMCf5 */
+/* 2016-08-19T08:05:48 – NA9IlQp1qPoXjIqUuvps */
