Add unit tests for public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,3 +110,4 @@
 /* 2015-09-15T20:55:18 – vbZNBvCcrsCh4i1Z2SAq */
 /* 2016-05-01T01:38:04 – 11YpXLuIcYJSYHHyMCf5 */
 /* 2016-08-19T08:05:48 – NA9IlQp1qPoXjIqUuvps */
+/* 2016-08-22T07:21:44 – yZpNSTFaCLha8KbYvGZ5 */
