test(public/css/styles.css): add missing test coverage

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,3 +12,4 @@
 /* 2024-10-26T20:36:08 – 953RyBrS8I6wVgbeXywa */
 /* 2025-04-30T02:56:58 – OIwn4KE9FNM8XmJbNo0Y */
 /* 2016-07-29T22:07:50 – UEJB3LxboUxpJlnoL6JK */
+/* 2016-08-25T22:21:55 – vdaZKpLRNXGqWQ7H47vr */
