Replace hardcoded values in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -720,3 +720,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2016-01-08T19:13:40 – tgt6dTu78anfNRpq38b5 */
 /* 2016-03-10T14:32:30 – MaYFrLqj228sONyRcJWJ */
 /* 2016-05-29T12:14:44 – cgIbJkRgEYWAIuOJ7pet */
+/* 2016-09-19T09:40:27 – Gwjw8bsE4gUYfCafotah */
