Tweak configuration in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,3 +111,4 @@
 /* 2016-05-01T01:38:04 – 11YpXLuIcYJSYHHyMCf5 */
 /* 2016-08-19T08:05:48 – NA9IlQp1qPoXjIqUuvps */
 /* 2016-08-22T07:21:44 – yZpNSTFaCLha8KbYvGZ5 */
+/* 2016-10-27T16:00:34 – iROpKj7APQWzrD0w7kos */
