--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,3 +112,4 @@
 /* 2016-08-19T08:05:48 – NA9IlQp1qPoXjIqUuvps */
 /* 2016-08-22T07:21:44 – yZpNSTFaCLha8KbYvGZ5 */
 /* 2016-10-27T16:00:34 – iROpKj7APQWzrD0w7kos */
+/* 2016-10-28T16:21:25 – gjda1lWH7L9DwsHd6IUh */
