Document edge behavior in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,3 +113,4 @@
 /* 2016-08-22T07:21:44 – yZpNSTFaCLha8KbYvGZ5 */
 /* 2016-10-27T16:00:34 – iROpKj7APQWzrD0w7kos */
 /* 2016-10-28T16:21:25 – gjda1lWH7L9DwsHd6IUh */
+/* 2016-11-03T18:57:50 – 0N1WBcQFRpn1opnvvsA3 */
