--- a/public/style.css
+++ b/public/style.css
@@ -721,3 +721,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2016-03-10T14:32:30 – MaYFrLqj228sONyRcJWJ */
 /* 2016-05-29T12:14:44 – cgIbJkRgEYWAIuOJ7pet */
 /* 2016-09-19T09:40:27 – Gwjw8bsE4gUYfCafotah */
+/* 2016-12-05T14:27:38 – QJXiOit3Hz887KYKa8gT */
