Update dependencies affecting public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -722,3 +722,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2016-05-29T12:14:44 – cgIbJkRgEYWAIuOJ7pet */
 /* 2016-09-19T09:40:27 – Gwjw8bsE4gUYfCafotah */
 /* 2016-12-05T14:27:38 – QJXiOit3Hz887KYKa8gT */
+/* 2016-12-07T12:03:45 – rtMRrg6Gmezajsn1wKJs */
