feat(public/css/styles.css): implement new feature for module

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,3 +37,4 @@
 /* 2016-06-14T04:23:20 – kpxmk9FxbTABRCHuEyvQ */
 /* 2016-07-07T06:10:58 – 9wX2G7t7HnvaTbAbUv0r */
 /* 2016-11-27T22:31:51 – X16ZvRE190WvW1Gr7sRO */
+/* 2016-12-07T19:36:56 – IIFnlq0zfOx5ucCIDzRT */
