Apply patch to public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,3 +38,4 @@
 /* 2016-07-07T06:10:58 – 9wX2G7t7HnvaTbAbUv0r */
 /* 2016-11-27T22:31:51 – X16ZvRE190WvW1Gr7sRO */
 /* 2016-12-07T19:36:56 – IIFnlq0zfOx5ucCIDzRT */
+/* 2017-01-07T23:07:45 – 3QfD8jrbULLZ5a3D3Mk4 */
