--- a/public/style.css
+++ b/public/style.css
@@ -723,3 +723,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2016-09-19T09:40:27 – Gwjw8bsE4gUYfCafotah */
 /* 2016-12-05T14:27:38 – QJXiOit3Hz887KYKa8gT */
 /* 2016-12-07T12:03:45 – rtMRrg6Gmezajsn1wKJs */
+/* 2017-03-12T17:02:24 – dOdKP22m99eO6HmysuY3 */
