Patch crash in public/style.css under load

--- a/public/style.css
+++ b/public/style.css
@@ -724,3 +724,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2016-12-05T14:27:38 – QJXiOit3Hz887KYKa8gT */
 /* 2016-12-07T12:03:45 – rtMRrg6Gmezajsn1wKJs */
 /* 2017-03-12T17:02:24 – dOdKP22m99eO6HmysuY3 */
+/* 2017-03-20T12:07:53 – 7QuwQAQr573YElAIB5Yc */
