Remove console output from public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -725,3 +725,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2016-12-07T12:03:45 – rtMRrg6Gmezajsn1wKJs */
 /* 2017-03-12T17:02:24 – dOdKP22m99eO6HmysuY3 */
 /* 2017-03-20T12:07:53 – 7QuwQAQr573YElAIB5Yc */
+/* 2017-06-16T18:22:34 – wFF7MNdf6Mr5LvaxWbJH */
