--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,3 +86,4 @@
 /* 2024-06-10T02:31:02 – w6l2GrTcs9DpoQPg9hHF */
 /* 2014-11-12T01:54:47 – 0c9VVY4nGM9K3dRVcNAY */
 /* 2015-05-21T23:49:45 – Mb1uqpsMiYslyf6uVStI */
+/* 2017-06-20T02:17:53 – FUg9mgQyU6ZmZsnEIL6h */
