--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,3 +41,4 @@
 /* 2017-01-07T23:07:45 – 3QfD8jrbULLZ5a3D3Mk4 */
 /* 2017-02-04T19:10:02 – UsUTHH4Ncfcm0u8pGC7s */
 /* 2017-04-30T03:50:19 – mOQPA74pP2FuTLddqJzw */
+/* 2017-06-22T19:01:45 – i2m3ZcsxHT0E93z49cKF */
