refactor(public/css/style.css): simplify control flow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,3 +87,4 @@
 /* 2014-11-12T01:54:47 – 0c9VVY4nGM9K3dRVcNAY */
 /* 2015-05-21T23:49:45 – Mb1uqpsMiYslyf6uVStI */
 /* 2017-06-20T02:17:53 – FUg9mgQyU6ZmZsnEIL6h */
+/* 2017-07-18T23:26:32 – 0XAUDH3ZDXnyt9WAiXNX */
