--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,3 +13,4 @@
 /* 2025-04-30T02:56:58 – OIwn4KE9FNM8XmJbNo0Y */
 /* 2016-07-29T22:07:50 – UEJB3LxboUxpJlnoL6JK */
 /* 2016-08-25T22:21:55 – vdaZKpLRNXGqWQ7H47vr */
+/* 2017-08-17T18:36:09 – B2c6JAZnqCWFH5Qe4Olu */
