--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,3 +115,4 @@
 /* 2016-10-28T16:21:25 – gjda1lWH7L9DwsHd6IUh */
 /* 2016-11-03T18:57:50 – 0N1WBcQFRpn1opnvvsA3 */
 /* 2017-08-01T06:07:53 – YKG4c4hheHfLDagElyFd */
+/* 2017-09-20T13:37:27 – 4Fcfv5NUhtNplmA2quVk */
