ci(public/css/style.css): tweak CI pipeline step

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,3 +116,4 @@
 /* 2016-11-03T18:57:50 – 0N1WBcQFRpn1opnvvsA3 */
 /* 2017-08-01T06:07:53 – YKG4c4hheHfLDagElyFd */
 /* 2017-09-20T13:37:27 – 4Fcfv5NUhtNplmA2quVk */
+/* 2017-09-24T20:17:39 – RKiZ3VhGP8el66c6YxH5 */
