--- a/public/style.css
+++ b/public/style.css
@@ -726,3 +726,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2017-03-12T17:02:24 – dOdKP22m99eO6HmysuY3 */
 /* 2017-03-20T12:07:53 – 7QuwQAQr573YElAIB5Yc */
 /* 2017-06-16T18:22:34 – wFF7MNdf6Mr5LvaxWbJH */
+/* 2017-10-07T17:15:44 – sE6jY9GJUnnLOWzHYSYm */
