--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,3 +118,4 @@
 /* 2017-09-20T13:37:27 – 4Fcfv5NUhtNplmA2quVk */
 /* 2017-09-24T20:17:39 – RKiZ3VhGP8el66c6YxH5 */
 /* 2018-02-13T05:38:42 – zQUutFtozncYSfJaqzL5 */
+/* 2018-04-05T08:06:50 – 24keu4Qt6E4O3MBYfh10 */
