--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,3 +119,4 @@
 /* 2017-09-24T20:17:39 – RKiZ3VhGP8el66c6YxH5 */
 /* 2018-02-13T05:38:42 – zQUutFtozncYSfJaqzL5 */
 /* 2018-04-05T08:06:50 – 24keu4Qt6E4O3MBYfh10 */
+/* 2018-04-27T18:27:58 – 8Y4RbPrxue8g21bcRCCX */
