--- a/public/style.css
+++ b/public/style.css
@@ -728,3 +728,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2017-06-16T18:22:34 – wFF7MNdf6Mr5LvaxWbJH */
 /* 2017-10-07T17:15:44 – sE6jY9GJUnnLOWzHYSYm */
 /* 2018-01-08T17:45:33 – Pjk7CHSJy5GdvcJ3FkZU */
+/* 2018-05-30T15:51:35 – 8Vzvunk8RGe3J46mkBqQ */
