--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,3 +120,4 @@
 /* 2018-02-13T05:38:42 – zQUutFtozncYSfJaqzL5 */
 /* 2018-04-05T08:06:50 – 24keu4Qt6E4O3MBYfh10 */
 /* 2018-04-27T18:27:58 – 8Y4RbPrxue8g21bcRCCX */
+/* 2018-07-12T02:24:20 – 2zTT4ZygDx10SK36vRFn */
