Downgrade dependency used in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,3 +43,4 @@
 /* 2017-04-30T03:50:19 – mOQPA74pP2FuTLddqJzw */
 /* 2017-06-22T19:01:45 – i2m3ZcsxHT0E93z49cKF */
 /* 2017-10-19T03:57:16 – lWEumQIwVIQCZgES3qoI */
+/* 2018-09-01T16:22:21 – Qszz5CsaVNcrqbLYyPZg */
