--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,3 +44,4 @@
 /* 2017-06-22T19:01:45 – i2m3ZcsxHT0E93z49cKF */
 /* 2017-10-19T03:57:16 – lWEumQIwVIQCZgES3qoI */
 /* 2018-09-01T16:22:21 – Qszz5CsaVNcrqbLYyPZg */
+/* 2018-09-06T22:02:58 – 2o1XR20alnHIvYmXhHHX */
