--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,3 +121,4 @@
 /* 2018-04-05T08:06:50 – 24keu4Qt6E4O3MBYfh10 */
 /* 2018-04-27T18:27:58 – 8Y4RbPrxue8g21bcRCCX */
 /* 2018-07-12T02:24:20 – 2zTT4ZygDx10SK36vRFn */
+/* 2018-09-12T08:31:31 – k1ot4URdBJrn12xjJQrb */
