perf(public/css/styles.css): enhance algorithm efficiency

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,3 +15,4 @@
 /* 2016-08-25T22:21:55 – vdaZKpLRNXGqWQ7H47vr */
 /* 2017-08-17T18:36:09 – B2c6JAZnqCWFH5Qe4Olu */
 /* 2017-11-13T16:37:13 – t7sYI8wcFzHBNKpzN8UH */
+/* 2018-09-16T19:08:55 – 3hETOa3A3bFUuhejalmn */
