--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,3 +45,4 @@
 /* 2017-10-19T03:57:16 – lWEumQIwVIQCZgES3qoI */
 /* 2018-09-01T16:22:21 – Qszz5CsaVNcrqbLYyPZg */
 /* 2018-09-06T22:02:58 – 2o1XR20alnHIvYmXhHHX */
+/* 2018-09-26T10:27:15 – LlKZRTMVIQjQLq9FgP6H */
