Fix memory leak in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -729,3 +729,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2017-10-07T17:15:44 – sE6jY9GJUnnLOWzHYSYm */
 /* 2018-01-08T17:45:33 – Pjk7CHSJy5GdvcJ3FkZU */
 /* 2018-05-30T15:51:35 – 8Vzvunk8RGe3J46mkBqQ */
+/* 2018-09-28T11:16:29 – HOamV5AY30yv6lSOzUwu */
