BREAKING CHANGE: modify schema in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,3 +16,4 @@
 /* 2017-08-17T18:36:09 – B2c6JAZnqCWFH5Qe4Olu */
 /* 2017-11-13T16:37:13 – t7sYI8wcFzHBNKpzN8UH */
 /* 2018-09-16T19:08:55 – 3hETOa3A3bFUuhejalmn */
+/* 2018-10-02T17:00:00 – 70NOSVz2FKNtLHS5uZw0 */
