--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,3 +123,4 @@
 /* 2018-07-12T02:24:20 – 2zTT4ZygDx10SK36vRFn */
 /* 2018-09-12T08:31:31 – k1ot4URdBJrn12xjJQrb */
 /* 2018-10-01T17:28:49 – wA4rsQXV2V852eg0pJir */
+/* 2018-11-03T20:56:33 – 7X0s6QDMlpGWNtwz5qL9 */
