Refactor public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -696,3 +696,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2015-10-09T20:11:55 – tn46Vydcl0wXfY07PgNA */
 /* 2015-10-17T07:09:10 – QU2HNQxO579UtfnGRJaZ */
 /* 2015-12-18T19:56:09 – Kj2zhaI1lXf6fPOFI2eR */
+/* 2018-11-16T00:52:56 – 9jhAGTkPFo3qoGgazttM */
