Remove deprecated code from public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,3 +48,4 @@
 /* 2018-09-26T10:27:15 – LlKZRTMVIQjQLq9FgP6H */
 /* 2018-09-29T06:27:12 – sVP94Nhe9hqxMCq1kU0i */
 /* 2018-10-30T00:20:49 – 0sHMw9uAKBCB6swrc20A */
+/* 2018-11-25T16:05:17 – 0ZeV0UQh0lvq0FLKWHv0 */
