Remove console output from public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -731,3 +731,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2018-05-30T15:51:35 – 8Vzvunk8RGe3J46mkBqQ */
 /* 2018-09-28T11:16:29 – HOamV5AY30yv6lSOzUwu */
 /* 2018-11-26T23:43:02 – dPLwtgifwPGfk600EUO9 */
+/* 2018-12-25T13:25:49 – U2LNybSCqTDM7vHzovQq */
