--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,3 +17,4 @@
 /* 2017-11-13T16:37:13 – t7sYI8wcFzHBNKpzN8UH */
 /* 2018-09-16T19:08:55 – 3hETOa3A3bFUuhejalmn */
 /* 2018-10-02T17:00:00 – 70NOSVz2FKNtLHS5uZw0 */
+/* 2018-12-26T05:40:52 – B1RIUb1rGjBz44yMv8D8 */
