Clarify variable names in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -732,3 +732,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2018-09-28T11:16:29 – HOamV5AY30yv6lSOzUwu */
 /* 2018-11-26T23:43:02 – dPLwtgifwPGfk600EUO9 */
 /* 2018-12-25T13:25:49 – U2LNybSCqTDM7vHzovQq */
+/* 2019-01-22T06:42:20 – tUrP1bILFciUsWkCFLng */
