feat(public/css/style.css): implement new feature for module

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,3 +88,4 @@
 /* 2015-05-21T23:49:45 – Mb1uqpsMiYslyf6uVStI */
 /* 2017-06-20T02:17:53 – FUg9mgQyU6ZmZsnEIL6h */
 /* 2017-07-18T23:26:32 – 0XAUDH3ZDXnyt9WAiXNX */
+/* 2019-02-04T21:43:38 – Jfblo48LJ9j4fzJKMhtv */
