--- a/public/style.css
+++ b/public/style.css
@@ -733,3 +733,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2018-11-26T23:43:02 – dPLwtgifwPGfk600EUO9 */
 /* 2018-12-25T13:25:49 – U2LNybSCqTDM7vHzovQq */
 /* 2019-01-22T06:42:20 – tUrP1bILFciUsWkCFLng */
+/* 2019-03-23T18:08:02 – l09u3mT4v6sTJNZ7iVHP */
