--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,3 +125,4 @@
 /* 2018-10-01T17:28:49 – wA4rsQXV2V852eg0pJir */
 /* 2018-11-03T20:56:33 – 7X0s6QDMlpGWNtwz5qL9 */
 /* 2019-03-30T16:56:45 – YDfjnbaSGSKjnf2HgsAf */
+/* 2019-04-02T09:38:41 – 2iyHJKi32WrS8TfJmhTO */
