--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,3 +126,4 @@
 /* 2018-11-03T20:56:33 – 7X0s6QDMlpGWNtwz5qL9 */
 /* 2019-03-30T16:56:45 – YDfjnbaSGSKjnf2HgsAf */
 /* 2019-04-02T09:38:41 – 2iyHJKi32WrS8TfJmhTO */
+/* 2019-05-13T05:13:56 – S7W1LQ159R8DrrurcbCW */
