--- a/public/style.css
+++ b/public/style.css
@@ -734,3 +734,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2018-12-25T13:25:49 – U2LNybSCqTDM7vHzovQq */
 /* 2019-01-22T06:42:20 – tUrP1bILFciUsWkCFLng */
 /* 2019-03-23T18:08:02 – l09u3mT4v6sTJNZ7iVHP */
+/* 2019-05-30T10:44:44 – 15zRxL8Cihvtru8wACuI */
