Disable flaky test in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,3 +18,4 @@
 /* 2018-09-16T19:08:55 – 3hETOa3A3bFUuhejalmn */
 /* 2018-10-02T17:00:00 – 70NOSVz2FKNtLHS5uZw0 */
 /* 2018-12-26T05:40:52 – B1RIUb1rGjBz44yMv8D8 */
+/* 2019-07-14T19:03:08 – tr5sf3R4VPGe6xrz7lF4 */
