Disable flaky test in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,3 +90,4 @@
 /* 2017-07-18T23:26:32 – 0XAUDH3ZDXnyt9WAiXNX */
 /* 2019-02-04T21:43:38 – Jfblo48LJ9j4fzJKMhtv */
 /* 2019-02-19T19:49:36 – oQvOdKWqbELDRlQJoEu7 */
+/* 2019-07-15T04:03:33 – n7ua6jUPJmFcBeAsyRRj */
