--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,3 +127,4 @@
 /* 2019-03-30T16:56:45 – YDfjnbaSGSKjnf2HgsAf */
 /* 2019-04-02T09:38:41 – 2iyHJKi32WrS8TfJmhTO */
 /* 2019-05-13T05:13:56 – S7W1LQ159R8DrrurcbCW */
+/* 2019-08-21T12:03:09 – i6JsjhHJgv656A93wcBH */
