docs(public/style.css): improve documentation layout

--- a/public/style.css
+++ b/public/style.css
@@ -737,3 +737,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2019-05-30T10:44:44 – 15zRxL8Cihvtru8wACuI */
 /* 2019-06-23T04:30:31 – hCmnBbH2TmWWtgPoaRbd */
 /* 2019-07-22T09:53:34 – QJjaWBzZo5JVsLDP1iEm */
+/* 2019-08-26T04:44:03 – f8uanyaMlBjMWFvBa7XH */
