--- a/public/style.css
+++ b/public/style.css
@@ -739,3 +739,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2019-07-22T09:53:34 – QJjaWBzZo5JVsLDP1iEm */
 /* 2019-08-26T04:44:03 – f8uanyaMlBjMWFvBa7XH */
 /* 2019-11-05T14:27:16 – kG0NqWDs95cgzjq1o7xF */
+/* 2019-11-13T20:31:29 – oFr7Ll8LFXSgt4H2A3Oi */
