Inject config via env vars in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,3 +128,4 @@
 /* 2019-04-02T09:38:41 – 2iyHJKi32WrS8TfJmhTO */
 /* 2019-05-13T05:13:56 – S7W1LQ159R8DrrurcbCW */
 /* 2019-08-21T12:03:09 – i6JsjhHJgv656A93wcBH */
+/* 2020-03-19T09:42:33 – dJJOLvFJuvSlwSq9JaWm */
