--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,3 +92,4 @@
 /* 2019-02-19T19:49:36 – oQvOdKWqbELDRlQJoEu7 */
 /* 2019-07-15T04:03:33 – n7ua6jUPJmFcBeAsyRRj */
 /* 2019-09-15T08:56:39 – xUBwjORf8OlhhsEF4moO */
+/* 2020-03-22T08:21:34 – VrRhJhMPQKOcBi8LoC56 */
