--- a/public/style.css
+++ b/public/style.css
@@ -697,3 +697,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2015-10-17T07:09:10 – QU2HNQxO579UtfnGRJaZ */
 /* 2015-12-18T19:56:09 – Kj2zhaI1lXf6fPOFI2eR */
 /* 2018-11-16T00:52:56 – 9jhAGTkPFo3qoGgazttM */
+/* 2020-04-06T22:14:57 – sECoyV0J7AN1XwiKfCdt */
