test(public/style.css): add missing test coverage

--- a/public/style.css
+++ b/public/style.css
@@ -698,3 +698,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2015-12-18T19:56:09 – Kj2zhaI1lXf6fPOFI2eR */
 /* 2018-11-16T00:52:56 – 9jhAGTkPFo3qoGgazttM */
 /* 2020-04-06T22:14:57 – sECoyV0J7AN1XwiKfCdt */
+/* 2020-05-01T20:25:23 – c1tdnA2i6kUixt7ixWVK */
