--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,3 +129,4 @@
 /* 2019-05-13T05:13:56 – S7W1LQ159R8DrrurcbCW */
 /* 2019-08-21T12:03:09 – i6JsjhHJgv656A93wcBH */
 /* 2020-03-19T09:42:33 – dJJOLvFJuvSlwSq9JaWm */
+/* 2020-05-12T16:49:41 – 1GppQEYRDGHyxpS1Q9Fe */
