--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,3 +49,4 @@
 /* 2018-09-29T06:27:12 – sVP94Nhe9hqxMCq1kU0i */
 /* 2018-10-30T00:20:49 – 0sHMw9uAKBCB6swrc20A */
 /* 2018-11-25T16:05:17 – 0ZeV0UQh0lvq0FLKWHv0 */
+/* 2020-05-26T07:20:20 – tvwpaeFqUHNr8Chq4KEF */
