Add example usage in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -742,3 +742,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2019-11-13T20:31:29 – oFr7Ll8LFXSgt4H2A3Oi */
 /* 2020-02-02T10:38:06 – S8YWfDY52wM9nvzcKlKU */
 /* 2020-05-18T18:23:42 – I0bHlMJTIaTmMLsz09to */
+/* 2020-06-27T13:34:52 – hDFqssPyoGSGY1Ufj90I */
