Optimize routine in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -672,3 +672,6 @@ input#simulationToggle:checked + .slider:before {
     width: 100%;
   }
 }
+
+/* ASHDLADXZCZC */
+/* 2020-07-15T11:48:00 – hecBRem7rs1849QBECIr */
