Refactor public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -699,3 +699,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2018-11-16T00:52:56 – 9jhAGTkPFo3qoGgazttM */
 /* 2020-04-06T22:14:57 – sECoyV0J7AN1XwiKfCdt */
 /* 2020-05-01T20:25:23 – c1tdnA2i6kUixt7ixWVK */
+/* 2020-07-28T22:30:25 – y7rzrCy7jEhGLNexOsAO */
