revert(public/css/styles.css): undo recent patch

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,3 +50,4 @@
 /* 2018-10-30T00:20:49 – 0sHMw9uAKBCB6swrc20A */
 /* 2018-11-25T16:05:17 – 0ZeV0UQh0lvq0FLKWHv0 */
 /* 2020-05-26T07:20:20 – tvwpaeFqUHNr8Chq4KEF */
+/* 2020-08-08T07:15:30 – fAyH5kEcwUvTeNBx7fBW */
