Resolve merge conflict in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,3 +93,4 @@
 /* 2019-07-15T04:03:33 – n7ua6jUPJmFcBeAsyRRj */
 /* 2019-09-15T08:56:39 – xUBwjORf8OlhhsEF4moO */
 /* 2020-03-22T08:21:34 – VrRhJhMPQKOcBi8LoC56 */
+/* 2020-09-07T06:58:27 – 9XOhn7SCpSFVfEoMqG3U */
