feat(DASH-88): add dashboard filters in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -700,3 +700,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-04-06T22:14:57 – sECoyV0J7AN1XwiKfCdt */
 /* 2020-05-01T20:25:23 – c1tdnA2i6kUixt7ixWVK */
 /* 2020-07-28T22:30:25 – y7rzrCy7jEhGLNexOsAO */
+/* 2020-09-22T19:41:12 – rSfYZLFUOyn2ACcPwDNb */
