--- a/public/style.css
+++ b/public/style.css
@@ -701,3 +701,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-05-01T20:25:23 – c1tdnA2i6kUixt7ixWVK */
 /* 2020-07-28T22:30:25 – y7rzrCy7jEhGLNexOsAO */
 /* 2020-09-22T19:41:12 – rSfYZLFUOyn2ACcPwDNb */
+/* 2020-10-05T15:36:49 – PwjtvmS3xhf66SZBcyGz */
