Apply patch to public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -743,3 +743,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-02-02T10:38:06 – S8YWfDY52wM9nvzcKlKU */
 /* 2020-05-18T18:23:42 – I0bHlMJTIaTmMLsz09to */
 /* 2020-06-27T13:34:52 – hDFqssPyoGSGY1Ufj90I */
+/* 2020-10-28T07:32:26 – fPylowADIEO6OxZPxjih */
