Simplify logic in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,3 +20,4 @@
 /* 2018-12-26T05:40:52 – B1RIUb1rGjBz44yMv8D8 */
 /* 2019-07-14T19:03:08 – tr5sf3R4VPGe6xrz7lF4 */
 /* 2020-03-31T13:38:00 – g3GBGWEUmOUKihMnELHm */
+/* 2020-10-29T08:29:09 – G7CUTowKvpmq7i2CujMQ */
