--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,3 +94,4 @@
 /* 2019-09-15T08:56:39 – xUBwjORf8OlhhsEF4moO */
 /* 2020-03-22T08:21:34 – VrRhJhMPQKOcBi8LoC56 */
 /* 2020-09-07T06:58:27 – 9XOhn7SCpSFVfEoMqG3U */
+/* 2020-11-02T20:00:20 – eSCCXKVEp0zUadeG7xRY */
