--- a/public/style.css
+++ b/public/style.css
@@ -744,3 +744,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-05-18T18:23:42 – I0bHlMJTIaTmMLsz09to */
 /* 2020-06-27T13:34:52 – hDFqssPyoGSGY1Ufj90I */
 /* 2020-10-28T07:32:26 – fPylowADIEO6OxZPxjih */
+/* 2020-11-12T16:47:30 – qcbrkAHjTDO41MZmYd7X */
