Cleanup imports in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,3 +72,6 @@
 .wallet-connected #walletAddress {
     display: inline-block;
 }
+
+/* ASHDLADXZCZC */
+/* 2020-12-28T03:16:34 – fDiy1HoAjMjrm4PvjWTL */
