Backport changes to public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -702,3 +702,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-07-28T22:30:25 – y7rzrCy7jEhGLNexOsAO */
 /* 2020-09-22T19:41:12 – rSfYZLFUOyn2ACcPwDNb */
 /* 2020-10-05T15:36:49 – PwjtvmS3xhf66SZBcyGz */
+/* 2020-12-29T06:59:18 – A1CYlYJedUlnsHVjc22S */
