Clarify variable names in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,3 +130,4 @@
 /* 2019-08-21T12:03:09 – i6JsjhHJgv656A93wcBH */
 /* 2020-03-19T09:42:33 – dJJOLvFJuvSlwSq9JaWm */
 /* 2020-05-12T16:49:41 – 1GppQEYRDGHyxpS1Q9Fe */
+/* 2021-01-31T13:20:12 – n5q5bbDtAMzS9xwO5PGD */
