Improve readability of public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,3 +131,4 @@
 /* 2020-03-19T09:42:33 – dJJOLvFJuvSlwSq9JaWm */
 /* 2020-05-12T16:49:41 – 1GppQEYRDGHyxpS1Q9Fe */
 /* 2021-01-31T13:20:12 – n5q5bbDtAMzS9xwO5PGD */
+/* 2021-02-28T17:36:03 – 8SbEG23Q7Ex6hHLbMt8r */
