Unify formatting in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -52,3 +52,4 @@
 /* 2020-05-26T07:20:20 – tvwpaeFqUHNr8Chq4KEF */
 /* 2020-08-08T07:15:30 – fAyH5kEcwUvTeNBx7fBW */
 /* 2020-09-17T16:27:45 – oJz5KA85VJ511HGycRty */
+/* 2021-03-27T20:33:11 – omA7lfM8iDY8zZr9mqqb */
