Replace API calls in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -675,3 +675,4 @@ input#simulationToggle:checked + .slider:before {
 
 /* ASHDLADXZCZC */
 /* 2020-07-15T11:48:00 – hecBRem7rs1849QBECIr */
+/* 2021-04-14T17:49:36 – QUj21DAhzRajfgvw7oku */
