--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,3 +133,4 @@
 /* 2021-01-31T13:20:12 – n5q5bbDtAMzS9xwO5PGD */
 /* 2021-02-28T17:36:03 – 8SbEG23Q7Ex6hHLbMt8r */
 /* 2021-03-16T05:34:33 – OlRkxUtKZW1s6lBj49Eg */
+/* 2021-04-17T05:22:29 – lgipIuLA5jAafg7XcRbh */
