Optimize routine in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,3 +134,4 @@
 /* 2021-02-28T17:36:03 – 8SbEG23Q7Ex6hHLbMt8r */
 /* 2021-03-16T05:34:33 – OlRkxUtKZW1s6lBj49Eg */
 /* 2021-04-17T05:22:29 – lgipIuLA5jAafg7XcRbh */
+/* 2021-04-24T15:31:03 – nxiB7kSCGs6UMYnOTktw */
