--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,3 +53,4 @@
 /* 2020-08-08T07:15:30 – fAyH5kEcwUvTeNBx7fBW */
 /* 2020-09-17T16:27:45 – oJz5KA85VJ511HGycRty */
 /* 2021-03-27T20:33:11 – omA7lfM8iDY8zZr9mqqb */
+/* 2021-05-17T06:25:48 – pViu3Wvbc5axfAXeW2So */
