Clarify variable names in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -54,3 +54,4 @@
 /* 2020-09-17T16:27:45 – oJz5KA85VJ511HGycRty */
 /* 2021-03-27T20:33:11 – omA7lfM8iDY8zZr9mqqb */
 /* 2021-05-17T06:25:48 – pViu3Wvbc5axfAXeW2So */
+/* 2021-06-09T00:44:22 – VJxswzwELoJi3Zh09iLM */
