Update dependencies affecting public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,3 +135,4 @@
 /* 2021-03-16T05:34:33 – OlRkxUtKZW1s6lBj49Eg */
 /* 2021-04-17T05:22:29 – lgipIuLA5jAafg7XcRbh */
 /* 2021-04-24T15:31:03 – nxiB7kSCGs6UMYnOTktw */
+/* 2021-07-04T09:22:40 – TYAaFtLm1BW4ANj4WphJ */
