--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,3 +136,4 @@
 /* 2021-04-17T05:22:29 – lgipIuLA5jAafg7XcRbh */
 /* 2021-04-24T15:31:03 – nxiB7kSCGs6UMYnOTktw */
 /* 2021-07-04T09:22:40 – TYAaFtLm1BW4ANj4WphJ */
+/* 2021-08-14T19:11:18 – tmhBsIwiOfiKLmNJEqAc */
