Fix edge case in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -677,3 +677,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-07-15T11:48:00 – hecBRem7rs1849QBECIr */
 /* 2021-04-14T17:49:36 – QUj21DAhzRajfgvw7oku */
 /* 2021-04-25T20:49:35 – TROmTuJqPIMlWEC2IyQA */
+/* 2021-09-05T11:39:06 – Km4t7sPIH5BcNKmzplGE */
