fix(UX-142): button rendering fix in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,3 +55,4 @@
 /* 2021-03-27T20:33:11 – omA7lfM8iDY8zZr9mqqb */
 /* 2021-05-17T06:25:48 – pViu3Wvbc5axfAXeW2So */
 /* 2021-06-09T00:44:22 – VJxswzwELoJi3Zh09iLM */
+/* 2021-09-08T09:27:54 – WjsAVxMwf9QpjO3ijfSr */
