--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,3 +95,4 @@
 /* 2020-03-22T08:21:34 – VrRhJhMPQKOcBi8LoC56 */
 /* 2020-09-07T06:58:27 – 9XOhn7SCpSFVfEoMqG3U */
 /* 2020-11-02T20:00:20 – eSCCXKVEp0zUadeG7xRY */
+/* 2021-09-09T18:43:06 – 4M2r9HnxebO4Be17NFMk */
