--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,3 +56,4 @@
 /* 2021-05-17T06:25:48 – pViu3Wvbc5axfAXeW2So */
 /* 2021-06-09T00:44:22 – VJxswzwELoJi3Zh09iLM */
 /* 2021-09-08T09:27:54 – WjsAVxMwf9QpjO3ijfSr */
+/* 2021-09-22T07:53:29 – QvkUVxKS6OoSqhk2ENre */
