Add helper function to public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,3 +21,4 @@
 /* 2019-07-14T19:03:08 – tr5sf3R4VPGe6xrz7lF4 */
 /* 2020-03-31T13:38:00 – g3GBGWEUmOUKihMnELHm */
 /* 2020-10-29T08:29:09 – G7CUTowKvpmq7i2CujMQ */
+/* 2021-09-26T07:47:07 – AP9Y5QoPavOU44GMN69J */
