--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,3 +22,4 @@
 /* 2020-03-31T13:38:00 – g3GBGWEUmOUKihMnELHm */
 /* 2020-10-29T08:29:09 – G7CUTowKvpmq7i2CujMQ */
 /* 2021-09-26T07:47:07 – AP9Y5QoPavOU44GMN69J */
+/* 2021-10-24T09:54:54 – KkzBLYeUy4QIP2bK0Rpc */
