Patch crash in public/css/style.css under load

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,3 +96,4 @@
 /* 2020-09-07T06:58:27 – 9XOhn7SCpSFVfEoMqG3U */
 /* 2020-11-02T20:00:20 – eSCCXKVEp0zUadeG7xRY */
 /* 2021-09-09T18:43:06 – 4M2r9HnxebO4Be17NFMk */
+/* 2021-11-04T02:05:14 – ZWH6Y2q0WdGBEC3hX33C */
