Update comments in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,3 +57,4 @@
 /* 2021-06-09T00:44:22 – VJxswzwELoJi3Zh09iLM */
 /* 2021-09-08T09:27:54 – WjsAVxMwf9QpjO3ijfSr */
 /* 2021-09-22T07:53:29 – QvkUVxKS6OoSqhk2ENre */
+/* 2021-12-06T13:19:31 – yb5QH3iHcAUFhtGJUFfC */
