--- a/public/style.css
+++ b/public/style.css
@@ -745,3 +745,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-06-27T13:34:52 – hDFqssPyoGSGY1Ufj90I */
 /* 2020-10-28T07:32:26 – fPylowADIEO6OxZPxjih */
 /* 2020-11-12T16:47:30 – qcbrkAHjTDO41MZmYd7X */
+/* 2021-12-20T20:48:03 – 2hpjUWmMPWbSwF1YwAJO */
