--- a/public/style.css
+++ b/public/style.css
@@ -746,3 +746,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-10-28T07:32:26 – fPylowADIEO6OxZPxjih */
 /* 2020-11-12T16:47:30 – qcbrkAHjTDO41MZmYd7X */
 /* 2021-12-20T20:48:03 – 2hpjUWmMPWbSwF1YwAJO */
+/* 2021-12-31T04:18:46 – OlW4d3mnDmZ6ayURFJJy */
