--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,3 +138,4 @@
 /* 2021-07-04T09:22:40 – TYAaFtLm1BW4ANj4WphJ */
 /* 2021-08-14T19:11:18 – tmhBsIwiOfiKLmNJEqAc */
 /* 2021-12-27T16:03:08 – X9c6u1FNdEePnbeu4GmZ */
+/* 2022-01-01T05:51:14 – NLIFx4gZ8jtR1FGZ5Xy9 */
