--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,3 +97,4 @@
 /* 2020-11-02T20:00:20 – eSCCXKVEp0zUadeG7xRY */
 /* 2021-09-09T18:43:06 – 4M2r9HnxebO4Be17NFMk */
 /* 2021-11-04T02:05:14 – ZWH6Y2q0WdGBEC3hX33C */
+/* 2022-01-05T16:20:03 – w8iCGabnORCfpMOAXrXz */
