Split responsibilities in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,3 +58,4 @@
 /* 2021-09-08T09:27:54 – WjsAVxMwf9QpjO3ijfSr */
 /* 2021-09-22T07:53:29 – QvkUVxKS6OoSqhk2ENre */
 /* 2021-12-06T13:19:31 – yb5QH3iHcAUFhtGJUFfC */
+/* 2022-01-11T08:21:10 – 3tDlgulagckag3ILWpxt */
