--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,3 +139,4 @@
 /* 2021-08-14T19:11:18 – tmhBsIwiOfiKLmNJEqAc */
 /* 2021-12-27T16:03:08 – X9c6u1FNdEePnbeu4GmZ */
 /* 2022-01-01T05:51:14 – NLIFx4gZ8jtR1FGZ5Xy9 */
+/* 2022-01-15T16:08:29 – 6KEQptTe8kaS6KmbnBsb */
