Refactor public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -678,3 +678,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2021-04-14T17:49:36 – QUj21DAhzRajfgvw7oku */
 /* 2021-04-25T20:49:35 – TROmTuJqPIMlWEC2IyQA */
 /* 2021-09-05T11:39:06 – Km4t7sPIH5BcNKmzplGE */
+/* 2022-01-17T09:55:03 – ucgsx1NsJHC9EgICRRiU */
