Handle null checks in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -747,3 +747,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-11-12T16:47:30 – qcbrkAHjTDO41MZmYd7X */
 /* 2021-12-20T20:48:03 – 2hpjUWmMPWbSwF1YwAJO */
 /* 2021-12-31T04:18:46 – OlW4d3mnDmZ6ayURFJJy */
+/* 2022-01-20T16:00:27 – lCrmkrTmP6A6zRGxA1Ml */
