Fix edge case in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,3 +59,4 @@
 /* 2021-09-22T07:53:29 – QvkUVxKS6OoSqhk2ENre */
 /* 2021-12-06T13:19:31 – yb5QH3iHcAUFhtGJUFfC */
 /* 2022-01-11T08:21:10 – 3tDlgulagckag3ILWpxt */
+/* 2022-01-29T12:18:34 – UtFgvmzw5W6ZC9JN7qEF */
