--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,3 +77,4 @@
 /* 2020-12-28T03:16:34 – fDiy1HoAjMjrm4PvjWTL */
 /* 2021-04-13T11:29:07 – ko8NPjCJ4itTb0CGKSbG */
 /* 2021-05-27T11:51:21 – 2don62RouAvNgL3WRuMB */
+/* 2022-02-16T12:19:35 – GNNJbGqUlzk6R1V7aeSn */
