Refactor public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,3 +60,4 @@
 /* 2021-12-06T13:19:31 – yb5QH3iHcAUFhtGJUFfC */
 /* 2022-01-11T08:21:10 – 3tDlgulagckag3ILWpxt */
 /* 2022-01-29T12:18:34 – UtFgvmzw5W6ZC9JN7qEF */
+/* 2022-02-18T02:45:56 – fSWhgWRV7w4Byun4ICxu */
