Add unit tests for public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -679,3 +679,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2021-04-25T20:49:35 – TROmTuJqPIMlWEC2IyQA */
 /* 2021-09-05T11:39:06 – Km4t7sPIH5BcNKmzplGE */
 /* 2022-01-17T09:55:03 – ucgsx1NsJHC9EgICRRiU */
+/* 2022-03-26T07:05:52 – yrUVjyutTOGWxAElpG6e */
