--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,3 +98,4 @@
 /* 2021-09-09T18:43:06 – 4M2r9HnxebO4Be17NFMk */
 /* 2021-11-04T02:05:14 – ZWH6Y2q0WdGBEC3hX33C */
 /* 2022-01-05T16:20:03 – w8iCGabnORCfpMOAXrXz */
+/* 2022-05-02T06:30:04 – u10cHxmPSXBD7dcn0jQg */
