fix(UX-142): button rendering fix in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -748,3 +748,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2021-12-20T20:48:03 – 2hpjUWmMPWbSwF1YwAJO */
 /* 2021-12-31T04:18:46 – OlW4d3mnDmZ6ayURFJJy */
 /* 2022-01-20T16:00:27 – lCrmkrTmP6A6zRGxA1Ml */
+/* 2022-05-05T08:28:57 – VcTsbNhvqH3TGHbIOKov */
