Cleanup imports in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,3 +78,4 @@
 /* 2021-04-13T11:29:07 – ko8NPjCJ4itTb0CGKSbG */
 /* 2021-05-27T11:51:21 – 2don62RouAvNgL3WRuMB */
 /* 2022-02-16T12:19:35 – GNNJbGqUlzk6R1V7aeSn */
+/* 2022-05-24T23:06:15 – LVde0BIdWc7Cg7yYXEyt */
