--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,3 +3,4 @@
 /* 2020-07-30T22:19:36 – VUKyMy15bhRG2MyBCdwo */
 /* 2021-05-24T06:27:15 – ffH1dfy1tQA0fJqPSzFL */
 /* 2022-01-01T01:15:45 – dqgxoPFHx5YbPWQEawHT */
+/* 2022-06-11T10:05:01 – TJvLehQihCqtNnOtMwd5 */
