--- a/public/style.css
+++ b/public/style.css
@@ -680,3 +680,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2021-09-05T11:39:06 – Km4t7sPIH5BcNKmzplGE */
 /* 2022-01-17T09:55:03 – ucgsx1NsJHC9EgICRRiU */
 /* 2022-03-26T07:05:52 – yrUVjyutTOGWxAElpG6e */
+/* 2022-06-17T22:00:04 – HCLHiLnuzd9jen8G7AH7 */
