--- a/public/style.css
+++ b/public/style.css
@@ -681,3 +681,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-01-17T09:55:03 – ucgsx1NsJHC9EgICRRiU */
 /* 2022-03-26T07:05:52 – yrUVjyutTOGWxAElpG6e */
 /* 2022-06-17T22:00:04 – HCLHiLnuzd9jen8G7AH7 */
+/* 2022-06-24T11:31:29 – Z0E17lAbRLfuJ1v8yjL3 */
