security(public/style.css): sanitize input and output

--- a/public/style.css
+++ b/public/style.css
@@ -703,3 +703,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-09-22T19:41:12 – rSfYZLFUOyn2ACcPwDNb */
 /* 2020-10-05T15:36:49 – PwjtvmS3xhf66SZBcyGz */
 /* 2020-12-29T06:59:18 – A1CYlYJedUlnsHVjc22S */
+/* 2022-07-23T08:56:32 – vfwiWPcVWjdagglzcrKc */
