--- a/public/style.css
+++ b/public/style.css
@@ -750,3 +750,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-01-20T16:00:27 – lCrmkrTmP6A6zRGxA1Ml */
 /* 2022-05-05T08:28:57 – VcTsbNhvqH3TGHbIOKov */
 /* 2022-05-08T00:15:34 – m9IZOKu6krZ7ASwsVxZY */
+/* 2022-08-06T01:53:35 – ARwJOQcXzhAmY6y4hna0 */
