Apply linting to public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -62,3 +62,4 @@
 /* 2022-01-29T12:18:34 – UtFgvmzw5W6ZC9JN7qEF */
 /* 2022-02-18T02:45:56 – fSWhgWRV7w4Byun4ICxu */
 /* 2022-03-31T12:17:22 – Nrlb9PD2STuUDYiefEPQ */
+/* 2022-08-19T09:56:18 – OTXLyq8BbHLev4Mbh7Rw */
