--- a/public/style.css
+++ b/public/style.css
@@ -751,3 +751,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-05-05T08:28:57 – VcTsbNhvqH3TGHbIOKov */
 /* 2022-05-08T00:15:34 – m9IZOKu6krZ7ASwsVxZY */
 /* 2022-08-06T01:53:35 – ARwJOQcXzhAmY6y4hna0 */
+/* 2022-09-04T21:56:51 – IouhFg6ZwNQ9vp7aBfnU */
