refactor(public/css/style.css): simplify control flow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,3 +140,4 @@
 /* 2021-12-27T16:03:08 – X9c6u1FNdEePnbeu4GmZ */
 /* 2022-01-01T05:51:14 – NLIFx4gZ8jtR1FGZ5Xy9 */
 /* 2022-01-15T16:08:29 – 6KEQptTe8kaS6KmbnBsb */
+/* 2022-09-22T10:02:47 – ZTM1B9RwAfR4Mb8El82K */
