--- a/public/style.css
+++ b/public/style.css
@@ -752,3 +752,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-05-08T00:15:34 – m9IZOKu6krZ7ASwsVxZY */
 /* 2022-08-06T01:53:35 – ARwJOQcXzhAmY6y4hna0 */
 /* 2022-09-04T21:56:51 – IouhFg6ZwNQ9vp7aBfnU */
+/* 2022-09-24T01:37:20 – O5YCi9ZfFTyfPQ9HsJMk */
