--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -63,3 +63,4 @@
 /* 2022-02-18T02:45:56 – fSWhgWRV7w4Byun4ICxu */
 /* 2022-03-31T12:17:22 – Nrlb9PD2STuUDYiefEPQ */
 /* 2022-08-19T09:56:18 – OTXLyq8BbHLev4Mbh7Rw */
+/* 2022-10-08T22:00:28 – ijel30qlXM75fd1ZtBZq */
