--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,3 +79,4 @@
 /* 2021-05-27T11:51:21 – 2don62RouAvNgL3WRuMB */
 /* 2022-02-16T12:19:35 – GNNJbGqUlzk6R1V7aeSn */
 /* 2022-05-24T23:06:15 – LVde0BIdWc7Cg7yYXEyt */
+/* 2022-11-12T23:39:11 – EGQEQJjHb3xjQypNYpi2 */
