Tweak configuration in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,3 +141,4 @@
 /* 2022-01-01T05:51:14 – NLIFx4gZ8jtR1FGZ5Xy9 */
 /* 2022-01-15T16:08:29 – 6KEQptTe8kaS6KmbnBsb */
 /* 2022-09-22T10:02:47 – ZTM1B9RwAfR4Mb8El82K */
+/* 2022-11-13T16:36:32 – Qnb2CUvFrvAbOJxGChkE */
