refactor(public/style.css): simplify control flow

--- a/public/style.css
+++ b/public/style.css
@@ -753,3 +753,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-08-06T01:53:35 – ARwJOQcXzhAmY6y4hna0 */
 /* 2022-09-04T21:56:51 – IouhFg6ZwNQ9vp7aBfnU */
 /* 2022-09-24T01:37:20 – O5YCi9ZfFTyfPQ9HsJMk */
+/* 2022-11-23T03:40:23 – NUIwUkJ0ad8fscnlJKMa */
