--- a/public/style.css
+++ b/public/style.css
@@ -704,3 +704,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2020-10-05T15:36:49 – PwjtvmS3xhf66SZBcyGz */
 /* 2020-12-29T06:59:18 – A1CYlYJedUlnsHVjc22S */
 /* 2022-07-23T08:56:32 – vfwiWPcVWjdagglzcrKc */
+/* 2022-12-08T20:15:59 – crk4yUnKAfkFRyaH1Aqg */
