--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,3 +65,4 @@
 /* 2022-08-19T09:56:18 – OTXLyq8BbHLev4Mbh7Rw */
 /* 2022-10-08T22:00:28 – ijel30qlXM75fd1ZtBZq */
 /* 2022-12-12T00:56:24 – vZv7mUH4a63Ar3LcGhHY */
+/* 2023-01-11T10:40:14 – 6ytura9nq0qi8zskB6SA */
