--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,3 +142,4 @@
 /* 2022-01-15T16:08:29 – 6KEQptTe8kaS6KmbnBsb */
 /* 2022-09-22T10:02:47 – ZTM1B9RwAfR4Mb8El82K */
 /* 2022-11-13T16:36:32 – Qnb2CUvFrvAbOJxGChkE */
+/* 2023-01-30T10:59:43 – szcqoDZp8kwSTVBLiGvC */
