Add data to public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,3 +80,4 @@
 /* 2022-02-16T12:19:35 – GNNJbGqUlzk6R1V7aeSn */
 /* 2022-05-24T23:06:15 – LVde0BIdWc7Cg7yYXEyt */
 /* 2022-11-12T23:39:11 – EGQEQJjHb3xjQypNYpi2 */
+/* 2023-02-14T14:01:08 – Gx7PztBpGwh3x6qSXEgw */
