--- a/public/style.css
+++ b/public/style.css
@@ -706,3 +706,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-07-23T08:56:32 – vfwiWPcVWjdagglzcrKc */
 /* 2022-12-08T20:15:59 – crk4yUnKAfkFRyaH1Aqg */
 /* 2022-12-13T08:45:39 – xflbuMqdwmrtXHBi6Ah1 */
+/* 2023-03-07T02:09:35 – 7RuoTkQnz7xifER25wfL */
