Inject config via env vars in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,4 @@
 /* 2021-05-24T06:27:15 – ffH1dfy1tQA0fJqPSzFL */
 /* 2022-01-01T01:15:45 – dqgxoPFHx5YbPWQEawHT */
 /* 2022-06-11T10:05:01 – TJvLehQihCqtNnOtMwd5 */
+/* 2023-03-26T09:41:41 – xuI8u3cPLOJZuP1IqqKP */
