--- a/public/style.css
+++ b/public/style.css
@@ -683,3 +683,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-06-17T22:00:04 – HCLHiLnuzd9jen8G7AH7 */
 /* 2022-06-24T11:31:29 – Z0E17lAbRLfuJ1v8yjL3 */
 /* 2023-04-23T04:06:32 – gddPy6Qaxfk5gInHn92F */
+/* 2023-04-23T19:39:54 – PV4hD5AD3pad0ijGntE8 */
