--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,3 +5,4 @@
 /* 2022-01-01T01:15:45 – dqgxoPFHx5YbPWQEawHT */
 /* 2022-06-11T10:05:01 – TJvLehQihCqtNnOtMwd5 */
 /* 2023-03-26T09:41:41 – xuI8u3cPLOJZuP1IqqKP */
+/* 2023-05-03T15:34:16 – 9jR2amcwZskrqSaHrxB6 */
