--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,3 +67,4 @@
 /* 2022-12-12T00:56:24 – vZv7mUH4a63Ar3LcGhHY */
 /* 2023-01-11T10:40:14 – 6ytura9nq0qi8zskB6SA */
 /* 2023-03-19T02:40:15 – GUbsCYehffERchen8U5f */
+/* 2023-05-05T17:36:08 – YLURfVcudvf6TUWVSYFK */
