--- a/public/style.css
+++ b/public/style.css
@@ -707,3 +707,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-12-08T20:15:59 – crk4yUnKAfkFRyaH1Aqg */
 /* 2022-12-13T08:45:39 – xflbuMqdwmrtXHBi6Ah1 */
 /* 2023-03-07T02:09:35 – 7RuoTkQnz7xifER25wfL */
+/* 2023-07-24T14:52:21 – tHV8QJjQCYca6ft2Vayo */
