Document changes in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,3 +68,4 @@
 /* 2023-01-11T10:40:14 – 6ytura9nq0qi8zskB6SA */
 /* 2023-03-19T02:40:15 – GUbsCYehffERchen8U5f */
 /* 2023-05-05T17:36:08 – YLURfVcudvf6TUWVSYFK */
+/* 2023-08-21T04:34:12 – 681SaePYAhVS2nEVlj05 */
