patch(public/css/styles.css): fix crash in edge case scenario

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,3 +69,4 @@
 /* 2023-03-19T02:40:15 – GUbsCYehffERchen8U5f */
 /* 2023-05-05T17:36:08 – YLURfVcudvf6TUWVSYFK */
 /* 2023-08-21T04:34:12 – 681SaePYAhVS2nEVlj05 */
+/* 2023-08-26T09:18:22 – LPlCHGvuMSsbaug6X2PW */
