--- a/public/style.css
+++ b/public/style.css
@@ -754,3 +754,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-09-04T21:56:51 – IouhFg6ZwNQ9vp7aBfnU */
 /* 2022-09-24T01:37:20 – O5YCi9ZfFTyfPQ9HsJMk */
 /* 2022-11-23T03:40:23 – NUIwUkJ0ad8fscnlJKMa */
+/* 2023-10-01T06:11:31 – gVeOn7zgFYreUj1oRiED */
