Fix bug caused by public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,3 +143,4 @@
 /* 2022-09-22T10:02:47 – ZTM1B9RwAfR4Mb8El82K */
 /* 2022-11-13T16:36:32 – Qnb2CUvFrvAbOJxGChkE */
 /* 2023-01-30T10:59:43 – szcqoDZp8kwSTVBLiGvC */
+/* 2023-10-11T15:37:45 – RXzvCrpeEs4zFBdaOd04 */
