--- a/public/style.css
+++ b/public/style.css
@@ -709,3 +709,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2023-03-07T02:09:35 – 7RuoTkQnz7xifER25wfL */
 /* 2023-07-24T14:52:21 – tHV8QJjQCYca6ft2Vayo */
 /* 2023-08-05T11:22:59 – jgMpzJgdX1l5KkTDpbM7 */
+/* 2023-10-28T03:59:26 – UOcvO4SvipSz9Thd3xAN */
