--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,3 +23,4 @@
 /* 2020-10-29T08:29:09 – G7CUTowKvpmq7i2CujMQ */
 /* 2021-09-26T07:47:07 – AP9Y5QoPavOU44GMN69J */
 /* 2021-10-24T09:54:54 – KkzBLYeUy4QIP2bK0Rpc */
+/* 2023-11-09T07:07:21 – GrpfuzEcTwh8ZH8izgA7 */
