--- a/public/style.css
+++ b/public/style.css
@@ -755,3 +755,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-09-24T01:37:20 – O5YCi9ZfFTyfPQ9HsJMk */
 /* 2022-11-23T03:40:23 – NUIwUkJ0ad8fscnlJKMa */
 /* 2023-10-01T06:11:31 – gVeOn7zgFYreUj1oRiED */
+/* 2023-11-18T08:26:21 – EC88nj49ax4dBmPyiaSV */
