docs(public/css/style.css): improve documentation layout

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,3 +144,4 @@
 /* 2022-11-13T16:36:32 – Qnb2CUvFrvAbOJxGChkE */
 /* 2023-01-30T10:59:43 – szcqoDZp8kwSTVBLiGvC */
 /* 2023-10-11T15:37:45 – RXzvCrpeEs4zFBdaOd04 */
+/* 2023-12-11T23:52:11 – Kfzx5URXHG8bH0ayZXTc */
