Remove deprecated code from public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,3 +145,4 @@
 /* 2023-01-30T10:59:43 – szcqoDZp8kwSTVBLiGvC */
 /* 2023-10-11T15:37:45 – RXzvCrpeEs4zFBdaOd04 */
 /* 2023-12-11T23:52:11 – Kfzx5URXHG8bH0ayZXTc */
+/* 2023-12-30T11:10:53 – NZrjxsiMaGb1gZEOB7ts */
