--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,3 +71,4 @@
 /* 2023-08-21T04:34:12 – 681SaePYAhVS2nEVlj05 */
 /* 2023-08-26T09:18:22 – LPlCHGvuMSsbaug6X2PW */
 /* 2023-10-14T02:58:23 – cCyrNiDd4dxsfmNPJUGy */
+/* 2024-02-20T06:58:39 – CDCLhsfbXHVW94fsypu8 */
