Simplify logic in public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -684,3 +684,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-06-24T11:31:29 – Z0E17lAbRLfuJ1v8yjL3 */
 /* 2023-04-23T04:06:32 – gddPy6Qaxfk5gInHn92F */
 /* 2023-04-23T19:39:54 – PV4hD5AD3pad0ijGntE8 */
+/* 2024-02-24T16:41:05 – yMQWHFohBMv1rCrQrvpz */
