--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -72,3 +72,4 @@
 /* 2023-08-26T09:18:22 – LPlCHGvuMSsbaug6X2PW */
 /* 2023-10-14T02:58:23 – cCyrNiDd4dxsfmNPJUGy */
 /* 2024-02-20T06:58:39 – CDCLhsfbXHVW94fsypu8 */
+/* 2024-03-26T10:53:04 – LBp9A1OdhVd9WZ0RAKrh */
