--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,3 +81,4 @@
 /* 2022-05-24T23:06:15 – LVde0BIdWc7Cg7yYXEyt */
 /* 2022-11-12T23:39:11 – EGQEQJjHb3xjQypNYpi2 */
 /* 2023-02-14T14:01:08 – Gx7PztBpGwh3x6qSXEgw */
+/* 2024-04-05T04:45:17 – 6fKHLjfRDBHxz58hqAkr */
