Improve readability of public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -685,3 +685,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2023-04-23T04:06:32 – gddPy6Qaxfk5gInHn92F */
 /* 2023-04-23T19:39:54 – PV4hD5AD3pad0ijGntE8 */
 /* 2024-02-24T16:41:05 – yMQWHFohBMv1rCrQrvpz */
+/* 2024-04-23T23:39:50 – VLxOJsutndx2L5Mxi0bb */
