--- a/public/style.css
+++ b/public/style.css
@@ -756,3 +756,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2022-11-23T03:40:23 – NUIwUkJ0ad8fscnlJKMa */
 /* 2023-10-01T06:11:31 – gVeOn7zgFYreUj1oRiED */
 /* 2023-11-18T08:26:21 – EC88nj49ax4dBmPyiaSV */
+/* 2024-04-24T13:19:10 – ZwLykYh24gqHpxbPFutu */
