Remove unused function from public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,3 +6,4 @@
 /* 2022-06-11T10:05:01 – TJvLehQihCqtNnOtMwd5 */
 /* 2023-03-26T09:41:41 – xuI8u3cPLOJZuP1IqqKP */
 /* 2023-05-03T15:34:16 – 9jR2amcwZskrqSaHrxB6 */
+/* 2024-05-05T17:36:04 – mgoO31GQFlrbatxWX4AH */
