--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,3 +73,4 @@
 /* 2023-10-14T02:58:23 – cCyrNiDd4dxsfmNPJUGy */
 /* 2024-02-20T06:58:39 – CDCLhsfbXHVW94fsypu8 */
 /* 2024-03-26T10:53:04 – LBp9A1OdhVd9WZ0RAKrh */
+/* 2024-05-12T22:17:47 – OQIrvIuOsraChZovCqGV */
