--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,3 +83,4 @@
 /* 2023-02-14T14:01:08 – Gx7PztBpGwh3x6qSXEgw */
 /* 2024-04-05T04:45:17 – 6fKHLjfRDBHxz58hqAkr */
 /* 2024-04-28T04:05:21 – pDQnLuRRhw3MktvmXqpa */
+/* 2024-06-10T02:31:02 – w6l2GrTcs9DpoQPg9hHF */
