hotfix(public/style.css): emergency fix for prod bug

--- a/public/style.css
+++ b/public/style.css
@@ -760,3 +760,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-06-15T05:22:55 – Xbi7FtDWKPmbVHG1QjUn */
 /* 2024-06-19T00:40:13 – pUHVrcfsvEO7O5lZmsu4 */
 /* 2024-07-01T17:50:33 – yTt8uSu1zw0EyWSXZBIE */
+/* 2024-07-09T10:17:38 – iVl8nwPg6Caih4H53AMw */
