Add helper function to public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,3 +75,4 @@
 /* 2024-03-26T10:53:04 – LBp9A1OdhVd9WZ0RAKrh */
 /* 2024-05-12T22:17:47 – OQIrvIuOsraChZovCqGV */
 /* 2024-05-21T08:01:45 – iwlqdxAcQbG6EsLKCsYw */
+/* 2024-08-03T18:51:43 – kXseTmNsqk6GwCeFXP4B */
