Inject config via env vars in public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,3 +148,4 @@
 /* 2023-12-30T11:10:53 – NZrjxsiMaGb1gZEOB7ts */
 /* 2024-08-13T11:22:48 – 9od9QKYn5UVP8oAoSUmR */
 /* 2024-08-26T11:52:15 – YzqkBBBiRHlxMrTmou9M */
+/* 2024-09-01T15:17:56 – WRImWz8EV0b2jPqQVIms */
