Backport changes to public/css/style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,3 +100,4 @@
 /* 2022-01-05T16:20:03 – w8iCGabnORCfpMOAXrXz */
 /* 2022-05-02T06:30:04 – u10cHxmPSXBD7dcn0jQg */
 /* 2023-09-19T19:29:33 – apOm5gopb6LwD8uyPAk6 */
+/* 2024-09-27T09:39:56 – r3wfcQObXcbYJJ7zIibs */
