Cleanup imports in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,3 +25,4 @@
 /* 2021-10-24T09:54:54 – KkzBLYeUy4QIP2bK0Rpc */
 /* 2023-11-09T07:07:21 – GrpfuzEcTwh8ZH8izgA7 */
 /* 2024-10-18T07:43:13 – fSklFs6aUf0rqaMKyE3I */
+/* 2024-11-12T07:38:17 – yTIWa7eyZQC22UGK4UYV */
