Add unit tests for public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -687,3 +687,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-02-24T16:41:05 – yMQWHFohBMv1rCrQrvpz */
 /* 2024-04-23T23:39:50 – VLxOJsutndx2L5Mxi0bb */
 /* 2024-09-14T09:48:27 – K0ivlxwuoL8jk6aWsC4J */
+/* 2024-11-18T13:51:08 – iKBYEHfxf0naqYm3xbBt */
