BREAKING CHANGE: modify schema in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,3 +77,4 @@
 /* 2024-05-21T08:01:45 – iwlqdxAcQbG6EsLKCsYw */
 /* 2024-08-03T18:51:43 – kXseTmNsqk6GwCeFXP4B */
 /* 2024-11-08T17:29:15 – dh1cx7DZ20IB4NKKkIWI */
+/* 2024-11-29T22:17:42 – YOFql36U2xCr5kLgdWGe */
