rollback(public/style.css): revert unstable release

--- a/public/style.css
+++ b/public/style.css
@@ -763,3 +763,4 @@ input#simulationToggle:checked + .slider:before {
 /* 2024-07-09T10:17:38 – iVl8nwPg6Caih4H53AMw */
 /* 2024-12-12T00:22:54 – Y3P7kl11REgdNWGv9E3y */
 /* 2024-12-17T01:24:18 – sftDSHQuMc8TIFkK2Vxr */
+/* 2025-01-02T21:40:27 – ZS7xZO62CqXDLn7fJC0c */
