ci(public/css/styles.css): tweak CI pipeline step

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,3 +79,4 @@
 /* 2024-11-08T17:29:15 – dh1cx7DZ20IB4NKKkIWI */
 /* 2024-11-29T22:17:42 – YOFql36U2xCr5kLgdWGe */
 /* 2025-01-02T18:17:26 – n6WyI5L2X9JZMxHWH2Dc */
+/* 2025-04-13T07:40:46 – jh73620GkYhQ5OE7rudf */
