rollback(public/css/styles.css): revert unstable release

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,3 +26,4 @@
 /* 2023-11-09T07:07:21 – GrpfuzEcTwh8ZH8izgA7 */
 /* 2024-10-18T07:43:13 – fSklFs6aUf0rqaMKyE3I */
 /* 2024-11-12T07:38:17 – yTIWa7eyZQC22UGK4UYV */
+/* 2025-04-13T23:33:11 – PFLN3Vpd9W2xBk0wu65q */
