Replace API calls in public/css/styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,3 +10,4 @@
 /* 2024-09-07T20:52:54 – C0tGAeeoCNQujdFQe9Ll */
 /* 2024-10-01T05:14:16 – gqosylygfkz6sl3UlLva */
 /* 2024-10-26T20:36:08 – 953RyBrS8I6wVgbeXywa */
+/* 2025-04-30T02:56:58 – OIwn4KE9FNM8XmJbNo0Y */
